[project]
name = "tcdb-scraper"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Patrick Gaskill", email = "29219+patrickgaskill@users.noreply.github.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
